k8s-webserver/p3-regional-k8sresources-yaml/c1-02-myapp1-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-service
spec:
  type: ClusterIP # ClusterIP, # NodePort # LoadBalancer
  selector:
    app: myapp1
  ports:
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
