k8s-webserver/p3-regional-k8sresources-yaml/c2-03-gateway-http-to-https-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect
spec:
  parentRefs:
    - name: mygateway1-regional
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
